# solitaire

./: CMakeLists.txt  README.md
include/: AnimationManager.hpp  BackgroundSelector.hpp  Card.hpp  Context.hpp  Deck.hpp  Game.hpp  GameState.hpp  GameTimer.hpp  HintSystem.hpp  Pile.hpp  PopupImage.hpp  ResourceManager.hpp  SaveManager.hpp  ScoreSystem.hpp  SettingsManager.hpp  SoundManager.hpp  StatsManager.hpp
src/: BackgroundSelector.cpp  Card.cpp  Context.cpp  Deck.cpp  Game.cpp  GameState.cpp  HintSystem.cpp  Pile.cpp  PopupImage.cpp  ResourceManager.cpp  main.cpp
